# MemMachine

./: .gitignore  .picktest.py.swp  .pre-commit-config.yaml  AGENTS.MD  BUILD_SEPARATE_PACKAGES.md  CONTRIBUTING-DOCS.md  CONTRIBUTING.md  DOCKER_COMPOSE_README.md  Dockerfile  PR_DESCRIPTION.md  README.md  STYLE_GUIDE.md  USAGE.md  VLLM_DOCKER_SETUP.md  build-docker.sh  build_client.sh  build_server.sh  config.yaml  docker-compose.age.yml  docker-compose.yml  load-env.ps1  memmachine-compose.sh  pyproject.toml  setup-ollama.sh
examples/cursor/: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  quicksort.py  test-date-formatter.js  test.sh  test_search.sh
examples/cursor/extension/: .gitignore  README.md  package.json  rules.md
examples/cursor/extension/src/: apiClient.ts  config.ts  episodicMemoryTreeProvider.ts  extension.ts  mcpServerManager.ts  profileMemoryTreeProvider.ts  sessionListTreeProvider.ts  utils.ts
examples/cursor/scripts/: activate_venv.sh  run-docker.sh  start_server.sh
examples/cursor/server/: README.md  __init__.py  app.py  auth.py  client.py  config.py  database.py  endpoints.py  handlers.py  main.py  mcp_tools.py  middleware.py  models.py  schemas.py  settings.py
examples/cursor/server/api/: __init__.py  auth.py  memory.py  misc.py  oauth.py  well_known.py
examples/cursor/server/auth/: __init__.py  jwt.py  oauth.py  password.py  token.py
examples/cursor/static/: index.html
examples/cursor/tests/: test_server.py
examples/cursor/web/: .dockerignore  .gitignore  Dockerfile  README.md  components.json  env.example  eslint.config.js  index.html  nginx.conf  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
examples/cursor/web/src/: app.tsx  (+3 more)
(+797 files in other folders)
